[ALIEN-3192] manage focus for forms: add a directive to manage correctly focus changes using tab and shift + tab key. use this directive in inpus, mete-properties and settings. Add also the stuff to emphasis any input that has the focus in the property editor.

--- a/alien4cloud-wizard-ui/src/main/webapp/assets/styles/_w4c-static.scss
+++ b/alien4cloud-wizard-ui/src/main/webapp/assets/styles/_w4c-static.scss
@@ -7,6 +7,9 @@
   margin: 20px;
 }
 
+.w4c-fill-space {
+  flex: 1 1 auto;
+}
 
 // [[ A4C status color set : this should not be theme dependant
 $text-success: #468847;
@@ -47,7 +50,5 @@ $text-primary: #428bca;
 }
 // ]] A4C color set for status
 
-.fill-space {
-  flex: 1 1 auto;
-}
+
 
